# drift-triage-copilot

./: .env.example  .gitignore  docker-compose.yml  dump.rdb
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/app/: main.py  schemas.py
agent/app/api/: approval.py  dashboard.py  investigation.py
agent/app/graph/: state.py  supervisor.py  workflow.py
agent/app/graph/nodes/: action.py  comms.py  triage.py
agent/app/prompts/: action.py  comms.py  supervisor.py  triage.py
agent/app/services/: checkpoint_svc.py  llm_svc.py  redis_svc.py
agent/tests/: test_nodes.py  test_schemas.py
core/: config.py  database.py  init_db.py  models.py  pyproject.toml
dashboard/: Dockerfile  app.py  pyproject.toml
dashboard/.streamlit/: config.toml
data/: reference_stats.json
model_service/: Dockerfile  main.py  pyproject.toml  schemas.py  shemas.py
model_service/app/: main.py  schemas.py
model_service/app/api/: drift_api.py  predict_api.py  promote_api.py
model_service/app/repos/: drift_repo.py  predict_repo.py
model_service/app/services/: drift_svc.py  predict_svc.py  registry_svc.py
scripts/: mlflow.db  pyproject.toml  seed_drift.py  test_worker.py  train.py
worker/: Dockerfile  pyproject.toml
worker/app/: main.py  schemas.py
worker/app/jobs/: model_jobs.py  router.py
worker/app/services/: queue_svc.py
