[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
]
